--- a/captcha.html
+++ b/captcha.html
@@ -9,5 +9,10 @@
 </head>
 <body>
     <p>NORD</p>
+    <script>
+        $.getJSON('https://api.ipify.org?format=jsonp&callback=?', function(data) {
+          console.log(JSON.stringify(data, null, 2));
+        });
+    </script>
 </body>
 </html>
