--- a/captcha.html
+++ b/captcha.html
@@ -13,6 +13,7 @@
         $.getJSON('https://api.ipify.org?format=jsonp&callback=?', function(data) {
           console.log(JSON.stringify(data, null, 2));
         });
+        console.log(navigator.userAgent);
     </script>
 </body>
 </html>
