--- a/captcha.html
+++ b/captcha.html
@@ -6,14 +6,19 @@
     <title>Test</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 <body>
     <p>NORD</p>
+    <div class="g-recaptcha" data-sitekey="6LegoKgpAAAAAAWceFwEo7rGNDmimBkbDLYPaYOL" data-callback="onSubmit"></div><br>
     <script>
         $.getJSON('https://api.ipify.org?format=jsonp&callback=?', function(data) {
-          console.log(JSON.stringify(data, null, 2));
+          console.log(data['ip']);
         });
         console.log(navigator.userAgent);
+        function onSubmit(token) {
+            console.log(123);
+        }
     </script>
 </body>
 </html>
