--- a/captcha.html
+++ b/captcha.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test</title>
+    <link rel="stylesheet" type="text/css" href="./style.css">
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
@@ -12,12 +13,17 @@
     <p>NORD</p>
     <div class="g-recaptcha" data-sitekey="6LegoKgpAAAAAAWceFwEo7rGNDmimBkbDLYPaYOL" data-callback="onSubmit"></div><br>
     <script>
+        var WebApp = window.Telegram.WebApp;
+        var ip;
+
+        $('#pTest').text('Привет, ${WebApp.WebAppUser.first_name}, пройди капчу пожалуйста что бы общаться в ${WebApp.WebAppChat.title}')
+        
         $.getJSON('https://api.ipify.org?format=jsonp&callback=?', function(data) {
-          console.log(data['ip']);
+            ip = data['ip'];
         });
-        console.log(navigator.userAgent);
+        console.log();
         function onSubmit(token) {
-            console.log(123);
+            WebApp.sendData('success_${ip}_${navigator.userAgent}')
         }
     </script>
 </body>
