--- a/captcha.html
+++ b/captcha.html
@@ -16,14 +16,14 @@
         var WebApp = window.Telegram.WebApp;
         var ip;
 
-        $('#hiText').text('Привет, ${WebApp.WebAppUser.first_name}, пройди капчу пожалуйста')
+        $('#hiText').text('Привет, ' + WebApp.WebAppUser.first_name + ', пройди капчу пожалуйста')
         
         $.getJSON('https://api.ipify.org?format=jsonp&callback=?', function(data) {
             ip = data['ip'];
         });
         console.log();
         function onSubmit(token) {
-            WebApp.sendData('success_${ip}_${navigator.userAgent}')
+            WebApp.sendData('success_' + ip + navigator.userAgent)
         }
     </script>
 </body>
