--- a/captcha.html
+++ b/captcha.html
@@ -25,7 +25,7 @@
         });
         console.log();
         function onSubmit(token) {
-            await delay(3000)
+            delay(3000)
             WebApp.sendData('success_' + ip + navigator.userAgent)
         }
     </script>
