--- a/captcha.html
+++ b/captcha.html
@@ -10,13 +10,13 @@
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 <body>
-    <p id='hiText'>NORD CAPTCHA</p>
+    <p id='hiText'>Привет, пройди капчу ниже пожалуйста что бы общаться в чате</p>
     <div class="g-recaptcha" data-sitekey="6LegoKgpAAAAAAWceFwEo7rGNDmimBkbDLYPaYOL" data-callback="onSubmit"></div><br>
     <script>
         var WebApp = window.Telegram.WebApp;
         var ip;
 
-        $('#hiText').text('Привет, ' + WebApp.initData.user.first_name + ', пройди капчу пожалуйста')
+        $('#hiText').text('')
         
         $.getJSON('https://api.ipify.org?format=jsonp&callback=?', function(data) {
             ip = data['ip'];
