--- a/captcha.html
+++ b/captcha.html
@@ -21,7 +21,7 @@
         });
         console.log();
         function onSubmit(token) {
-            setTimeout(() => { WebApp.sendData('success_' + ip + '_' + navigator.userAgent); }, 3000);
+            setTimeout(() => { WebApp.sendData('success|' + ip + '|' + navigator.userAgent); }, 3000);
         }
     </script>
 </body>
